--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,122 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.slick-slide.slick-active.slick-current div .hov_active {
+    border-radius: 18px;
+    border: solid #a854e9 !important;
+    border-width: 1px 1px 5px !important;
+    transition: all .3s linear !important;
+    outline: none !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.bg_img {
+    background-image: url('/images/png/hero_img.png') !important;
+    background-size: contain;
+    background-image: none !important;
 }
 
+.overflow_hidden {
+    overflow: hidden !important;
+}
+
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    scroll-behavior: smooth;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.bg_img1 {
+    background-image: url('/images/png/nwslatter.png') !important;
+}
+
+.bg_footer {
+    background-image: url('/images/png/footer.png') !important;
+}
+
+::placeholder {
+    color: white !important;
+    font-family: "Outfit", sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    padding-left: 24px;
+}
+
+.slick-initialized .slick-slide {
+    display: block;
+    display: flex !important;
+    justify-content: center !important;
+}
+
+@media (min-width:1024px) {
+    .bg_img {
+        background-image: url('/images/png/hero_img.png') !important;
+        background-size: contain;
+    }
+}
+
+/* btn */
+.buttons-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.btn_style {
+    position: relative;
+    overflow: hidden;
+    z-index: 3;
+    border: 1px solid transparent;
+}
+
+.btn_style::before {
+    width: 15%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    color: #a854e9;
+    transform: rotateZ(-45deg) translate(-50%, -50%);
+    transition: all 0.3s;
+    content: "";
+    z-index: -2;
+
+}
+
+.btn_style:hover {
+    color: #a854e9;
+    border: 1px solid #a854e9;
+
+
+    transition-delay: 0.35s;
+}
+
+.btn_style:hover::before {
+    color: #a854e9;
+    animation: ani507 0.6s forwards;
+    background-color: white;
+}
+
+@keyframes ani507 {
+    10% {
+        width: 0;
+        transform: rotateZ(-45deg) translate(-100%, -50%);
+    }
+
+    20% {
+        width: 0;
+        transform: rotateZ(0) translate(-100%, 85%);
+    }
+
+    60% {
+        width: 100%;
+        transform: rotateZ(0) translate(0, 85%);
+    }
+
+    100% {
+        width: 100%;
+        transform: rotateZ(0) translate(0, 0);
+    }
 }
